# structural-engineer-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: agents.py  database.py  main.py  models.py  routes.py  schemas.py
app/core/: config.py  logging.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  index.html
tests/: test_calculations.py  test_database.py  test_routes.py
